<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.holding.HoldingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:background="@color/c_D9DCDE"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_code"
                android:text="@string/target"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:textSize="14sp" />


            <TextView
                android:layout_width="0dp"
                android:text="@string/holding_and_enable"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:textSize="14sp" />


            <TextView
                android:text="@string/cost_and_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:textSize="14sp" />

            <TextView
                android:text="@string/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.7"
                android:gravity="end"
                android:orientation="vertical"
                android:textSize="14sp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_position"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fl_add_holding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</FrameLayout>