<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.HoldingDetailActivity">


    <LinearLayout
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:text="@string/target"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:textSize="14sp" />


        <TextView
            android:layout_width="0dp"
            android:text="@string/holding_and_enable"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:textSize="14sp" />


        <TextView
            android:text="@string/cost_and_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:textSize="14sp" />

        <TextView
            android:text="@string/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.7"
            android:gravity="end"
            android:orientation="vertical"
            android:textSize="14sp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.6"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="000651" />


            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                tools:text="格力电器" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_holding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="40.00" />


            <TextView
                android:id="@+id/tv_holding_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                tools:text="100.00" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="40.00" />


            <TextView
                android:id="@+id/tv_market_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                tools:text="100.00" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.7"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="40.00" />


            <TextView
                android:id="@+id/tv_result_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                tools:text="100.00" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_plan_quantity"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/planed_quantity_s"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_holding_quantity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/holding_quantity_s"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_planed_amount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:text="@string/planed_amount_s"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_holding_amount"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/holding_amount_s"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_surplus_money"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:text="@string/surplus_amount_s"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_surplus_quantity"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/surplus_quantity_s"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/tv_percent_of_build"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:text="@string/surplus_amount_s"
        android:textSize="14sp"
        android:textStyle="bold" />

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/tv_lowest_price"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:text="@string/assert_lowest_price"
        android:textSize="14sp"
        android:textStyle="bold" />

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <TextView
        android:text="操作列表"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/c_D9DCDE"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_code"
            android:text="操作方向"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:textSize="12sp" />


        <TextView
            android:layout_width="0dp"
            android:text="操作标的"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:textSize="12sp" />


        <TextView
            android:text="价格/数量"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:textSize="12sp" />

        <TextView
            android:text="金额/和建仓价格相比"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.9"
            android:gravity="end"
            android:orientation="vertical"
            android:textSize="12sp" />
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_position"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>